k3s/12-longhorn/longhorn-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: longhorn-system
  name: longhorn-ingress
  annotations:
    cert-manager.io/issuer: freeipa-issuer
    cert-manager.io/issuer-group: certmanager.freeipa.org
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/common-name: longhorn.k3s.i.stabl.one
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: https://authelia.i.stabl.one/api/verify
    ingress.kubernetes.io/auth-tls-insecure: "true"

spec:
  tls:
    - hosts:
      - longhorn.k3s.i.stabl.one
      secretName: longhorn-cert
  rules:
  - host: longhorn.k3s.i.stabl.one
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
